k8s_demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue-nginx
  template:
    metadata:
      labels:
        app: blue-nginx
    spec:
      containers:
        - name: nginx
          image: hcwxd/blue-whale
          ports:
            - containerPort: 3000
---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: purple-nginx
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: purple-nginx
#   template:
#     metadata:
#       labels:
#         app: purple-nginx
#     spec:
#       containers:
#         - name: nginx
#           image: hcwxd/purple-whale
#           ports:
#             - containerPort: 3000
