k8s_demo/istio-ingressgateway.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"istio-ingressgateway","install.operator.istio.io/owning-resource":"unknown","install.operator.istio.io/owning-resource-namespace":"istio-system","istio":"ingressgateway","istio.io/rev":"default","operator.istio.io/component":"IngressGateways","operator.istio.io/managed":"Reconcile","operator.istio.io/version":"1.8.3","release":"istio"},"name":"istio-ingressgateway","namespace":"istio-system"},"spec":{"ports": [...]
  creationTimestamp: "2021-07-01T02:32:34Z"
  labels:
    app: istio-ingressgateway
    install.operator.istio.io/owning-resource: unknown
    install.operator.istio.io/owning-resource-namespace: istio-system
    istio: ingressgateway
    istio.io/rev: default
    operator.istio.io/component: IngressGateways
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.8.3
    release: istio
  name: istio-ingressgateway
  namespace: istio-system
  resourceVersion: "2022"
  selfLink: /api/v1/namespaces/istio-system/services/istio-ingressgateway
  uid: 74e8260c-77cf-4ced-ad97-44cc1a55dabc
spec:
  clusterIP: 10.96.221.232
  externalTrafficPolicy: Cluster
  ports:
  - name: status-port
    nodePort: 30002
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http2
    nodePort: 30000
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    nodePort: 30001
    port: 443
    protocol: TCP
    targetPort: 8443
  - name: tcp
    nodePort: 32407
    port: 31400
    protocol: TCP
    targetPort: 31400
  - name: tls
    nodePort: 30520
    port: 15443
    protocol: TCP
    targetPort: 15443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
